# Discord-bot

./: .env  README.md  main.py  oof.txt  pyproject.toml  requirements.txt  webserver.py
commandes/: autres.py  events.py  fun.py  infos.py  messages.py  staff.py  utils.py
